# reverse-geocoder

./: CMakeLists.txt  README.md
android/: CMakeLists.txt  README.md
android/include/: jni.h
android/jni/: ReverseGeocoderJNI.cpp
android/src/main/: AndroidManifest.xml
android/src/main/java/com/reversegeocode/sdk/: ReverseGeocoder.java  ReverseGeocoderNative.java
data/: DefaultCountryDataProvider.cpp  DefaultUSStateDataProvider.cpp  README.md
data/countries/: AD_Andorra.cpp  AE_United_Arab_Emirates.cpp  AF_Afghanistan.cpp  AG_Antigua_Barbuda.cpp  AL_Albania.cpp  AM_Armenia.cpp  AO_Angola.cpp  AR_Argentina.cpp  AT_Austria.cpp  AU_Australia.cpp  AZ_Azerbaijan.cpp  BA_Bosnia_Herzegovina.cpp  BB_Barbados.cpp  BD_Bangladesh.cpp  BE_Belgium.cpp  BF_Burkina_Faso.cpp  BG_Bulgaria.cpp  BH_Bahrain.cpp  BI_Burundi.cpp  BJ_Benin.cpp  BN_Brunei_Darussalam.cpp  BO_Bolivia.cpp  BR_Brazil.cpp  BS_Bahamas.cpp  BT_Bhutan.cpp  BW_Botswana.cpp  BY_Belarus.cpp  BZ_Belize.cpp  CA_Canada.cpp  CD_Democratic_Republic_of_the_Congo.cpp  CF_Central_African_Republic.cpp  CG_Congo.cpp  CH_Switzerland.cpp  CI_C_te_d_Ivoire.cpp  CL_Chile.cpp  CM_Cameroon.cpp  CN_China.cpp  CO_Colombia.cpp  CR_Costa_Rica.cpp  CU_Cuba.cpp  (+155 more)
data/source/: README.md
data/source/opendatasoft/: AD.json  AE.json  AF.json  AG.json  AL.json  AM.json  AO.json  AR.json  AT.json  AU.json  AZ.json  BA.json  BB.json  BD.json  BE.json  BF.json  BG.json  BH.json  BI.json  BJ.json  BN.json  BO.json  BR.json  BS.json  BT.json  BW.json  BY.json  BZ.json  CA.json  CD.json  CF.json  CG.json  CH.json  CI.json  CL.json  CM.json  CN.json  CO.json  CR.json  CU.json  (+153 more)
data/us_states/: US_AK_Alaska.cpp  US_AL_Alabama.cpp  US_AR_Arkansas.cpp  US_AZ_Arizona.cpp  US_CA_California.cpp  US_CO_Colorado.cpp  US_CT_Connecticut.cpp  US_DE_Delaware.cpp  US_FL_Florida.cpp  US_GA_Georgia.cpp  US_HI_Hawaii.cpp  US_IA_Iowa.cpp  US_ID_Idaho.cpp  US_IL_Illinois.cpp  US_IN_Indiana.cpp  US_KS_Kansas.cpp  US_KY_Kentucky.cpp  US_LA_Louisiana.cpp  US_MA_Massachusetts.cpp  US_MD_Maryland.cpp  US_ME_Maine.cpp  US_MI_Michigan.cpp  US_MN_Minnesota.cpp  US_MO_Missouri.cpp  US_MS_Mississippi.cpp  US_MT_Montana.cpp  US_NC_North_Carolina.cpp  US_ND_North_Dakota.cpp  US_NE_Nebraska.cpp  US_NH_New_Hampshire.cpp  US_NJ_New_Jersey.cpp  US_NM_New_Mexico.cpp  US_NV_Nevada.cpp  US_NY_New_York.cpp  US_OH_Ohio.cpp  US_OK_Oklahoma.cpp  US_OR_Oregon.cpp  US_PA_Pennsylvania.cpp  US_RI_Rhode_Island.cpp  US_SC_South_Carolina.cpp  (+11 more)
examples/ios-consumer-app/.derived/: info.plist
examples/ios-consumer-app/ReverseGeocodeSDKDemo/: ContentView.swift  ReverseGeocodeMapView.swift  ReverseGeocodeSDKDemoApp.swift
examples/ios-consumer-app/ReverseGeocodeSDKDemo.xcodeproj/: project.pbxproj
examples/ios-consumer-smoke/: Package.swift
examples/ios-consumer-smoke/.build/: build.db  (+1 more)
examples/polygon-viewer/: README.md  index.html  style.css  viewer.js
include/rg/: BoundingBox.h  CountryBoundaryStore.h  CountryDataProvider.h  DefaultCountryDataProvider.h  DefaultUSStateDataProvider.h  EncodedCountryBoundary.h  Geometry.h  ReverseGeocoder.h  Types.h  c_api.h
ios/: README.md  RGReverseGeocoder.h  RGReverseGeocoder.mm  ReverseGeocodeSDK.h  module.modulemap
scripts/: build_android_aar.sh  build_ios_xcframework.sh
src/: BoundingBox.cpp  CountryBoundaryStore.cpp  EncodedCountryBoundary.cpp  Geometry.cpp  ReverseGeocoder.cpp  c_api.cpp
tests/: ReverseGeocoderTests.cpp
tools/: bulk_import_from_opendatasoft.py  import_country.py  import_from_opendatasoft.py  import_us_states_from_counties.py
(+1162 files in other folders)
